# riptide-watergraph

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api-reference.md  architecture.md  autonomy.md  cognitive-memory.md  deliberation.md  demo.md  deploy.md  environments.md  evaluation.md  index.md  install.md  mcp.md  monitoring.md  multimodal.md  openai-api.md  quickstart.md  reinforcement.md  self-improvement.md  skills.md  streaming-hitl.md  studio.md  tools-and-roles.md  workflows.md
examples/: README.md  custom_tool.py  mcp_connect.py  mcp_tools.py  quickstart.py  real_model_chat.py  real_model_eval.py
src/riptide_watergraph/: __init__.py  cli.py  config.py  service.py  workflows.py
src/riptide_watergraph/autonomy/: __init__.py  journal.py  loop.py  proposer.py
src/riptide_watergraph/environments/: __init__.py  guessing.py  runner.py
src/riptide_watergraph/evaluation/: __init__.py  runner.py  suite.py
src/riptide_watergraph/gateway/: __init__.py  demo_gateway.py  litellm_gateway.py  resilient.py
src/riptide_watergraph/graph/: __init__.py  builder.py  nodes.py  state.py  waves.py
src/riptide_watergraph/guardrails/: __init__.py  injection.py  pii.py  pipeline.py
src/riptide_watergraph/interfaces/: __init__.py  agent.py  autonomy.py  embedding.py  environment.py  gateway.py  guardrail.py  knowledge.py  memory.py  optimizer.py  reflector.py  reranker.py  reward.py  skill.py  swarm.py  tools.py  verifier.py
src/riptide_watergraph/mcp/: __init__.py  adapter.py  client.py  stdio.py
tests/: conftest.py  test_autonomy.py  test_chat.py  test_clarify.py  test_cli.py  test_cognitive_memory.py  test_coverage_tail.py  test_critic.py  test_deliberation.py  test_demo_gateway.py  test_dev_tools.py  test_dev_tools_exec.py  test_embedding.py  test_enterprise.py  test_environment.py  test_eval_real.py  test_eval_real_smoke.py  test_evaluation.py  test_gateway.py  test_gateway_normalize.py  test_graph_e2e.py  test_guardrails.py  test_guardrails_graph.py  test_handoff.py  test_interactive_hitl.py  test_library.py  test_library_extra.py  test_litellm_gateway.py  test_litellm_live.py  test_mcp.py  test_mcp_connect.py  test_mcp_stdio.py  test_mcp_stdio_live.py  test_memory_hygiene.py  test_memory_jsonfile.py  test_monitoring.py  test_multimodal.py  test_nodes_cov.py  test_openai_api.py  test_orchestration.py  (+33 more)
(+50 files in other folders)
